...
        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="156dp" />

        <Button
            android:id="@+id/buttonAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add a location" />

        <Button
            android:id="@+id/buttonRemoveLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Remove a location" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Logout" />

        <Button
            android:id="@+id/buttonChangeTheme"
...
