...
            android:layout_height="wrap_content"
            android:layout_x="-4dp"
            android:layout_y="233dp"
            android:text="Show Map" />

        <Button
            android:id="@+id/weatherButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Weather" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
